<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/topShape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/backround_tree"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:elevation="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1999"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/mantul" />

    <ImageView
        android:id="@+id/teens"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/teens"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/animationView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:elevation="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/button_mainActivity"
        app:layout_constraintEnd_toEndOf="@+id/button_mainActivity"
        app:layout_constraintStart_toStartOf="@+id/button_mainActivity"
        app:layout_constraintTop_toBottomOf="@id/teens">

        <Button
            android:id="@+id/truth_button_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_small"
            android:text="@string/truth_card"
            android:textColor="@color/green_bg" />

        <Button
            android:id="@+id/dare_button_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_small"
            android:text="@string/dare_card"
            android:textColor="@color/green_bg" />

    </LinearLayout>

    <Button
        android:id="@+id/button_mainActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintVertical_bias="0.859" />


</androidx.constraintlayout.widget.ConstraintLayout>